--- a/LolDetailsSheets/Views/Home/Index.cshtml
+++ b/LolDetailsSheets/Views/Home/Index.cshtml
@@ -1,25 +1,61 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<div class="text-center">
-    <h1 class="display-4">Ahri Spirit Blossom</h1>
-    <a href="https://localhost:44342/swagger/index.html" target="_blank"><button style="background: #069cc2; border-radius: 6px; padding: 15px; cursor: pointer; color: #fff; border: none; font-size: 16px;" >Swager</button></a>
-    
+<div class="slideshow-container">
+
+    <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img src="https://s2.glbimg.com/g5pdRzd4S0t8wbeTKac7NlnsDNE=/512x320/smart/e.glbimg.com/og/ed/f/original/2019/10/15/lol.jpg" style="width:100%">
+        <div class="text">Sub da img 1</div>
+    </div>
+
+    <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <img src="https://reporter1se.com.br/wp-content/uploads/2019/10/ehcxfnguyaa6owu-e1571942192676.jpeg" style="width:100%">
+        <div class="text">Legenda foto 2</div>
+    </div>
+
+    <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <img src="https://cdn.consumidormoderno.com.br/wp-content/uploads/2019/09/lol-miniatura.png" style="width:100%">
+        <div class="text">Legenda 3 da pic</div>
+    </div>
+
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
 </div>
 
-<div style="background-image: url('https://s2.glbimg.com/sp0jUHB5Fdz5l67-N_N7avfWe-A=/0x0:1024x604/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_bc8228b6673f488aa253bbcb03c80ec5/internal_photos/bs/2020/y/m/B0bItDROqGPJsmrdrSmg/sb-ahri-1024x604.jpg');">
-    <br />
-    <br />
-    @*<img src="~/img/ahri.jpg" alt="Italian Trulli">*@
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/bQFrqlRnIo8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-</div>
+
+<script>
+    var slideIndex = 0;
+    showSlides();
+
+    function showSlides() {
+        var i;
+        var slides = document.getElementsByClassName("mySlides");
+        var dots = document.getElementsByClassName("dot");
+        for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+        }
+        slideIndex++;
+        if (slideIndex > slides.length) { slideIndex = 1 }
+        for (i = 0; i < dots.length; i++) {
+            dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex - 1].style.display = "block";
+        dots[slideIndex - 1].className += " active";
+        setTimeout(showSlides, 4000);
+    }
+</script>
 
 
 
